--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <html>
 <head>
-  <title>Interface</title>
+  <title>Mini-Paint</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <header>
-    Macrisoft pls 
-    <span id="reset" class="pallette-black">Reset</span>
-    <a href="#red" id="red"><span class="pallette-red">Red</span></a>
-    <a href="#green" id="green"><span class="pallette-green">Green</span></a>
-    <a href="#blue" id="blue"><span class="pallette-blue">Blue</span></a>
-    <a href="#yellow" id="yellow"><span class="pallette-yellow">Yellow</span></a>
-    <a href="#white" id="white"><span class="pallette-white">White</span></a>
+    <div class="title">Macrisoft pls</div>
+    <div id="color-buttons">
+    <a href="#" id="reset" class="reset">Reset</a>
+      <a href="#" id="red" class="red">Red</a>
+      <a href="#" id="green" class="green">Green</a>
+      <a href="#" id="blue" class="blue">Blue</a>
+      <a href="#" id="yellow" class="yellow">Yellow</a>
+      <a href="#" id="orange" class="orange">Orange</a>
+    </div>
   </header>
-  <hr>
-  <div>
+  <div class="grid">
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
